syntax = "proto3";
package writestore;
option go_package = "./writestore";

service WriteStore {
  rpc PasteContent(PasteReq) returns (PasteResp);
}

message PasteReq{
  string content = 1;
  string remote_address = 2;
}

message PasteResp{
  string url = 1;
}